--- a/css/home.css
+++ b/css/home.css
@@ -99,6 +99,11 @@
   border-radius: 8px;
   padding: 16px;
 }
+@media only screen and (max-width: 991px) {
+  .slider-league-wrapper {
+    display: none;
+  }
+}
 .slider-league-wrapper .header-box {
   display: flex;
   justify-content: space-between;
@@ -154,6 +159,9 @@
   align-items: center;
   justify-content: center;
   margin-right: 30px;
+}
+.slider-league-wrapper .list-league-slider .list-league-slider-item img {
+  border-radius: 50%;
 }
 .slider-league-wrapper .btn-slider {
   min-width: 32px;
